Proper database behavior during tests.